<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:paddingStart="21dp"
    android:paddingEnd="21dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/login_logo"
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:src="@drawable/logo"
            android:transitionName="s_logo" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/login_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textColor="@color/primaryColor"
            android:textSize="33sp"
            android:transitionName="s_text" />

        <TextView
            android:id="@+id/signin_continue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_start"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:transitionName="t_signin_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_username"
                android:transitionName="t_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="21" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/doj"
                android:hint="Date of Birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DD/MM/YYYY"
                    android:maxLength="15"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:transitionName="t_password"
                android:weightSum="3">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/cpp"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:gravity="center"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showNameCode="true"
                    app:ccp_textSize="13sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_weight="2"
                    android:hint="@string/sign_up_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="15"

                        />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_pass"
                android:transitionName="t_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="21" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="1dp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Type"
                    android:textColor="#000"
                    android:paddingTop="11dp"
                    android:textSize="15sp"
                    android:layout_marginEnd="25sp"
                    />
                <RadioButton
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User"
                    android:layout_marginEnd="11sp"
                    android:checked="true"
                    android:buttonTint="@color/primaryColor"

                    />
                <RadioButton
                    android:id="@+id/teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teacher"
                    android:layout_marginEnd="11sp"
                    android:buttonTint="@color/primaryColor"
                    android:visibility="gone"
                    />
                <RadioButton
                    android:id="@+id/admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Admin"
                    android:buttonTint="@color/primaryColor"

                    />


            </RadioGroup>


            <Button
                android:id="@+id/signup_screen_signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/primaryColor"
                android:padding="11dp"
                android:onClick="registerUser"
                android:text="@string/sign_up_sign_up_btn"
                android:textColor="#fff"
                android:transitionName="t_login_button" />

            <Button
                android:id="@+id/signup_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:elevation="0dp"
                android:onClick="back_to_login"
                android:textColor="#000"
                android:text="Already have an account/Login"
                android:transitionName="t_signup_button" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>